	- gold carried by actors is now added to funds when exiting a location or entering a clone vat
	- completing multiple missions in a row without saving will yield more combat xp
	- space pirates will now have a chance to spare you if you can't afford to pay them
07/2023
	- use RandomWeight to (hopefully) disable items (and actors) from appearing as artifacts
	- ally units are now uncontrollable which entices the player to protect them instead of just moving them away (which is technically still possible)
	- added extra LZ panel fx for actors and items
	- fixed bug where selected difficulty setting was never used properly
	- AI skill settings for both player and cpu now get saved upon starting a game
	- dead actors are no longer useless
	- prosthetic limbs now get automatically applied to actors exiting the clone vat
	- added rare "blueprint" item 
08/2023
	- added evacuation mission
	- made turret upgrades cheaper
	- increased max unit capacities on all ships
	- fixed bugs with modded factions breaking due to missing "faction models"
	- clone vat control panel is no longer removed during assaults, allowing you to deploy units but not store them
	- fixed turrets being accounted for in ship's life support requirements
	- fixed limb mixups caused by identical preset names
	- fixed bugs related to heads coming off
	- fixed error with completion streak appearing as zero

04/2024
	- moved to VoidWanderersCCMod Github repository, changelog no longer seriously maintained

07/2024
	- RPG brain powers and abilities are re-enabled
	- any player/control configuration should be supported
	- small improvements to UI and menu UX
	- items outside the storage bay will take longer to collect
	- storage sweeps accelerate as they go
	- clone storage is now capable of nullifying dead actor jetpacks
	- clone storage also grabs dead actors and dampens their velocity
	- brains no longer flash the screen red when nothing is wrong
	- any unit can recieve brain powers