@@ -2,8 +2,6 @@ IncludeFile = VoidWanderers.rte/Terrains.ini
 
 IncludeFile = VoidWanderers.rte/Scenes/MissionLauncher.ini
 
-IncludeFile = VoidWanderers.rte/Scenes/StrategyScreen.ini
-
 IncludeFile = VoidWanderers.rte/Scenes/Vessel Lynx.ini
 
 IncludeFile = VoidWanderers.rte/Scenes/Vessel Gryphon.ini
