@@ -7,19 +7,18 @@ AddScene = Scene
 	LocationOnPlanet = Vector
 		X = 240
 		Y = 100
-	Terrain = SLTerrain
-		CopyOf = VoidWanderers.rte/VoidWanderers MissionLauncher Terrain
-	AddBackgroundLayer = SLBackground
-		CopyOf = VoidWanderers.rte/Strategy Layer
 	AddArea = Area
 		AddBox = Box
 			Corner = Vector
-				X = 194.5
-				Y = 451
-			Width = 91
-			Height = 92
+				X = 0
+				Y = 0
+			Width = 1
+			Height = 1
 		Name = VoidWanderersAntiBugZone
+	Terrain = SLTerrain
+		CopyOf = VoidWanderers.rte/VoidWanderers StrategyScreen Terrain
+	AddBackgroundLayer = SLBackground
+		CopyOf = VoidWanderers.rte/Strategy Layer
 	GlobalAcceleration = Vector
 		X = 0
 		Y = 0
-
