@@ -1,15 +1,0 @@
-AddScene = Scene
-	PresetName = VoidWanderers Strategy Screen
-	Description = VoidWanderers Strategy Screen
-	MetagamePlayable = 0
-	LocationOnPlanet = Vector
-		X = 0
-		Y = -2200
-	Terrain = SLTerrain
-		CopyOf = VoidWanderers.rte/VoidWanderers StrategyScreen Terrain
-	AddBackgroundLayer = SLBackground
-		CopyOf = VoidWanderers.rte/Strategy Layer
-	GlobalAcceleration = Vector
-		X = 0
-		Y = 0
-
