@@ -73,15 +73,6 @@ AddBackgroundLayer = SLBackground
 		X = -0.3
 
 AddTerrain = SLTerrain
-	PresetName = VoidWanderers MissionLauncher Terrain
-	BitmapFile = ContentFile
-		FilePath = VoidWanderers.rte/Scenes/Terrains/MissionLauncher.png
-	WrapX = 0
-	WrapY = 0
-	BackgroundTexture = ContentFile
-		FilePath = Base.rte/Scenes/Textures/DirtDark.png
-
-AddTerrain = SLTerrain
 	PresetName = VoidWanderers StrategyScreen Terrain
 	BitmapFile = ContentFile
 		FilePath = VoidWanderers.rte/Scenes/Terrains/StrategyScreen.png
