@@ -93,3 +93,9 @@
 	- clone storage also grabs dead actors and dampens their velocity
 	- brains no longer flash the screen red when nothing is wrong
 	- any unit can recieve brain powers
+
+08/2024
+	- Bit Crust is now primary maintainer, also made above patch
+	- Fixed a lot of bugs, probably made more
+	- Replaced some loop breakers with systems that can't loop infinitely
+	- Starting a pretty nasty refactor of decade old code yay
